--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
     <h4 id="scrollspyHeading1"></h4>
 
-    <div style="margin:0; background-color: darkgray;">
+    <div>
       <div class="row m-5">
         <div class="col m-5">
           <p id="blue">Hi,<br>I'am <span class="biggy">Muditha</span><br>Web Designer</p><br>
